--- a/src/componentes/Persons/persondetail.css
+++ b/src/componentes/Persons/persondetail.css
@@ -1,3 +1,74 @@
 .cardPerson-container{
     border: 1px solid black;
 }
+.style{
+    position: relative;
+    display: flex;
+    border: 1px solid rgb(175, 174, 174);
+    width: 400px;
+    height: 128px;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.4s;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.img_properties{
+    width: 127px;
+    height: 127px;
+}
+
+.hover_info{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    height: 128px;
+    text-align: center;
+    border-radius: 12px;
+    color: black;
+    font-size: 1.5rem;
+    background-color: #fef2f2cd;
+}
+
+
+
+ .style:hover .hover_info{
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    display: flex;
+
+    
+   
+    
+/*    width: 405px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ */
+} 
+
+/* .hover_info{
+   
+} */
+
+.card_holder{
+
+
+
+}
+
+.card_detail{
+
+  
+    box-shadow: -20px 0 35px -25px black, 20px 0 35px -25px black;
+}
+.round {
+	border: 3px solid white;
+	border-radius: 50%;
+	padding: 2px;
+}
+
+.img_detailed{
+    height: 200px;
+    width: 200px;
+}
