--- a/src/componentes/Persons/persondetail.css
+++ b/src/componentes/Persons/persondetail.css
@@ -22,6 +22,9 @@ button{
     max-width: 100%;
 }
 
+.personCard{
+    width: 330px;
+}
 
 @media only screen and (min-width: 1000px) {
     .img_properties{
@@ -35,7 +38,17 @@ button{
     .personCard{
         width: 350px;
     }
+
     
+}
+.style{
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.4s;
+
 }
 
 
@@ -44,7 +57,7 @@ button{
     display: none;
     align-items: center;
     justify-content: center;
-    width: 400px;
+    width: 350px;
     height: 128px;
     text-align: center;
     border-radius: 12px;
@@ -53,12 +66,10 @@ button{
     background-color: #fef2f2cd;
 }
 
-
-
  .style:hover .hover_info{
     position: absolute;
-    top: -1px;
-    left: -1px;
+    top: 1px;
+    left: 27px;
     display: flex;
 
     
